<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="240dp">

    <!-- 第一排 用TextView显示三个文本框-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"

        android:orientation="horizontal">
        <TextView
            android:id="@+id/home_speedup"
            style="@style/home_item"
            android:drawableTop="@drawable/icon_rocket"
            android:text="@string/home_text_rocket"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/home_softmgr"
            style="@style/home_item"
            android:drawableTop="@drawable/icon_softmgr"
            android:text="@string/home_text_soft_mgr"
            />
        <TextView
            android:id="@+id/home_phonemgr"
            style="@style/home_item"
            android:drawableTop="@drawable/icon_phonemgr"
            android:text="@string/home_text_phone_check"
            />

    </LinearLayout>
    <!-- 第二排 用TextView显示三个文本框-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/home_telmgr"
            style="@style/home_item"
            android:drawableTop="@drawable/icon_telmgr"
            android:text="@string/home_text_tel_mgr"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/home_filemgr"
            style="@style/home_item"
            android:drawableTop="@drawable/icon_filemgr"
            android:text="@string/home_text_file_mgr"
            />
        <TextView
            android:id="@+id/home_sdclean"
            style="@style/home_item"
            android:drawableTop="@drawable/icon_sdclean"
            android:text="@string/home_text_clean"
            />
    </LinearLayout>

</LinearLayout>