<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.feicui.edu.housekeeper.activity.LeadActivity">

    <!-- ViewPager控件 -->
    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/leadBackground"
        >
    </android.support.v4.view.ViewPager>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        >
        <!-- 第一个圆形指示器 -->
        <ImageView
            android:id="@+id/icon1"
            style="@style/LeadImageView"
            android:contentDescription="@string/lead_text_description1"
            />
        <!-- 第二个圆形指示器 -->
        <ImageView
            android:id="@+id/icon2"
            style="@style/LeadImageView"
            android:contentDescription="@string/lead_text_description2"
            />
        <!-- 第三个圆形指示器 -->
        <ImageView
            android:id="@+id/icon3"
            style="@style/LeadImageView"
            android:contentDescription="@string/lead_text_description3"
            />
    </LinearLayout>

    <!-- 文本框 -->
    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="@dimen/lead_skip_margin_right"
        android:layout_marginTop="@dimen/lead_skip_margin_top"
        android:text="@string/lead_skiptext"
        android:textStyle="bold"
        />

</RelativeLayout>
